2002-03-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-object.c: Compile fixes.

	* gmime-stream-null.c (g_mime_stream_null_finalize): And finally
	here.

	* gmime-stream-mmap.c (g_mime_stream_mmap_finalize): Here too.

	* gmime-stream-mem.c (g_mime_stream_mem_finalize): And again...

	* gmime-stream-fs.c (g_mime_stream_fs_finalize): Again here.

	* gmime-stream-filter.c (g_mime_stream_filter_finalize): Here too.

	* gmime-stream-file.c (g_mime_stream_file_finalize): Same.

	* gmime-stream-buffer.c (g_mime_stream_buffer_finalize): Call
	GObject's finalize function.

2002-03-24  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-param.c: 

	* memchunk.c: Make this compile.

	* internet-address.c (decode_mailbox): No longer check
	gmime_interfaces_utf8 as that was a hack in gmime-1's branch.

	* gmime-charset.c (charset_step): Sync with the gmime-1 branch. We
	now have multibyte charset detection.

	* gmime-utils.c: Sync with gmime-1's changed.
	(rfc2047_decode_word): Always convert decoded text to UTF-8.
	(rfc2047_encode_phrase_get_words): We can always assume our input
	is in UTF-8 now.
	(rfc2047_encode_phrase): Sam here.
	(g_string_append_len): Removed since glib2 now has this function.

	* gmime-param.c (decode_param): Make sure the decoded text is
	valid UTF-8.
	(encode_param): Convert to the best charset before encoding.
	(g_string_append_len): Removed since glib2 now has this function.

	* gmime.c (g_mime_init): Initializes gmime. We no longer care
	about GMIME_INIT_FLAGS_UTF8 as we now always use UTF-8 interfaces.

2002-03-17  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-null.c (g_mime_stream_null_get_type): Use
	GMIME_TYPE_STREAM as our base class.
	(g_mime_stream_null_class_init): Our parent class is a
	GMIME_STREAM_CLASS, not a G_OBJECT_CLASS.
	(g_mime_stream_null_finalize): Call our parent's finalize, which
	is GMIME_STREAM_CLASS's finalize, not G_OBJECT_CLASS's finalize.

	* gmime-stream-mmap.c: Same.

	* gmime-stream-filter.c: Here too.
