@@ -1,5 +1,10 @@
 2002-03-25  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* gmime-multipart.c: Compile fixes.
+
+	* gmime-header.c (g_mime_header_write_to_stream): Now returns the
+	number of bytes written or -1 on fail.
+
 	* gmime-object.c: Compile fixes.
 
 	* gmime-stream-null.c (g_mime_stream_null_finalize): And finally
